[gd_scene load_steps=5 format=3 uid="uid://b82ei7y1hs1qf"]

[ext_resource type="Script" path="res://ui/player_info_box.gd" id="1_jxl15"]
[ext_resource type="PackedScene" uid="uid://co5d0xri4kaif" path="res://ui/HTTPImageLoader.tscn" id="2_4e5yq"]
[ext_resource type="Theme" uid="uid://cblqb84whle2r" path="res://ui/bebus_theme.tres" id="3_3u1ox"]
[ext_resource type="Texture2D" uid="uid://b7ygbauek7olf" path="res://icon.svg" id="3_y12iy"]

[node name="PlayerInfoBox" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_jxl15")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PlayerName" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3u1ox")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center][color=green]bdasfebus[center]"
fit_content = true
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_y12iy")

[node name="LapLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_3u1ox")
text = "laps: 0"
horizontal_alignment = 1

[node name="HttpImageLoader" parent="." instance=ExtResource("2_4e5yq")]
